@@ -34,6 +34,8 @@ class Post {
 
 	function initialize() {
 
+		global $core;
+
 		$data = $this->raw_data;
 
 		$author = false;
@@ -45,10 +47,13 @@ class Post {
 		$content_text = strip_tags( $content_html ); // TODO: revisit this in the future
 
 		$link_preview = false;
+
 		if( $content_html ) {
 			$text = new Text($content_html);
 			$content_html = $text->cleanup()->get();
+		}
 
+		if( $core->config->get('link_preview') && $content_html ) {
 			$link_preview = $text->get_link_preview();
 		}
 
